# kanji-learning-backend

./: README.md
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
app/: CMakeLists.txt
app/src/: app.cpp  app.h  config.h  controller.cpp  controller.h  database.cpp  database.h  kanji.h  main.cpp  resources.h  resources.rc.in
app/src/auth/: auth_service.cpp  auth_service.h  jwt_middleware.cpp  jwt_middleware.h  telegram_auth.cpp  telegram_auth.h
app/src/database/: kanji_repository.cpp  kanji_repository.h  review_state_repository.cpp  review_state_repository.h  sqlite_connection.cpp
app/src/notification/: review_notifier.cpp
app/src/scheduler/: scheduler.h  wanikani_scheduler.cpp  wanikani_scheduler.h
app/src/utils/: crypto.cpp  crypto.h
app/test/: CMakeLists.txt  test_wanikani_sheduler.cpp
ui/: .env  index.html  package-lock.json  package.json
ui/src/: main.tsx
ui/src/components/: App.css  App.tsx  CompletionScreen.tsx  FlashCard.tsx  Header.tsx  LoadingScreen.tsx  LoginScreen.css  LoginScreen.tsx  ReviewScreen.tsx  types.ts
ui/src/core/: auth.ts  mockTransport.ts  transport.ts  transportFactory.ts
ui/src/hooks/: useAuth.ts  useKanjiReview.ts
